# tcpg-phonon-tools

./: .gitignore  LICENCE  MANIFEST.in  README.md  dftb_in.hsd  setup.cfg  setup.py
tcpg_phonon_tools/: _version.py  ase_dftbp_optimise.py  ase_get_primitive.py  dftbp_socket_hsd_setup.py
tcpg_phonon_tools/Analysis/: MantidHelper.py  Visualise.py
tcpg_phonon_tools/CASTEP/: CastepHelper.py  CastepHelperPhonopy.py
tcpg_phonon_tools/Crystal/: CrystalHelper.py  CrystalPhonopyHelper.py
tcpg_phonon_tools/Slurm/: SlurmJobHelper.py
tcpg_phonon_tools/TorchANI/: TorchANI_runner.py
tcpg_phonon_tools/dftbp/: ase_dftbp_optimise.py  dftbp_phonopy_setup.py  dftbp_socket_hsd_setup.py
tcpg_phonon_tools/templates/CASTEP/: CastepPhononRunTemplate  CastepPhononRunTemplateContinuation  PhononSlurmArrayTemplate
tcpg_phonon_tools/templates/CRYSTAL/optimisation/: INPUT.optimisation.template
tcpg_phonon_tools/templates/CRYSTAL/phonopy/: INPUT.phonopy.template
tcpg_phonon_tools/templates/dftbp/dftbp_phonon/: dftb_in.hsd.template  run.py.template
tcpg_phonon_tools/templates/dftbp/dftbp_socket_calc/: dftb_in.hsd.parallel_part.template  dftb_in.hsd.template
