[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = tcpg_phonon_tools/_version.py
versionfile_build = tcpg_phonon_tools/_version.py
tag_prefix = ''

[aliases]
test = pytest

[options]
# ...
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src