[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[aliases]
test = pytest

[options]
# ...
packages = find:
include_package_data = True

[options.packages.find]
where = src